<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="minimum_password">Password too short, enter minimum 5 characters</string>
    <string name="auth_failed">Log in failed, check your email and password or sign up</string>


    <string name="google_api" tools:ignore="TypographyDashes">AIzaSyD2AaNDOWYL3-0FJeNmHuQp5Ma_c3zmLM0</string>
    <string name="nav_header_title" tools:ignore="TypographyEllipsis">Sip A lil, smile a lil, live a lil...</string>
    <string name="nav_header_subtitle">LAVIA LIQUOR</string>
    <string name="title_activity_outlet"> Stores</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_3">Tab 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">LAVIA</string>
    <string name="title_activity_sales">Stock &amp; Sales</string>
    <string name="tab_text_1">Add Proucts</string>
    <string name="tab_text_2">Sales</string>
    <string name="title_activity_wine">Wine</string>
    <string name="title_activity_whiskey">Whiskey</string>
    <string name="title_activity_beer">Beer</string>
    <string name="title_activity_vodka">Vodka</string>
    <string name="title_activity_gar">Gin and Rum</string>
    <string name="title_activity_add">Stock Manager</string>
    <string name="title_activity_brant">Brandy and Tequila</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_cart">Cart</string>
    <string name="action_settings">Log Out</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_activity_refreshments">Refreshments</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_detail">Lavia Taste!</string>
    <string name="title_activity_stock_manager">Stock Manager</string>
    <string name="title_activity_products_tap">productsTap</string>
    <string name="title_activity_sales_tap">Sales Manager</string>
    <string name="title_activity_product">Stock Manager</string>
    <string name="title_activity_lavia_splash">lavia_splash</string>
    <string name="title_activity_maelezo">maelezo</string>
    <string name="title_activity_payout_dialog">payout_dialog</string>>
</resources>
